--- a/5.2/5.2.1/index.html
+++ b/5.2/5.2.1/index.html
@@ -11,7 +11,7 @@
 max).
 <script>
 	function random(min, max) {
-		let randomNumber = (Math.random() * (max - min) + min);
+		const randomNumber = (Math.random() * (max - min) + min);
 
 		return randomNumber;
 	}
