--- a/5.3/5.3.4/index.html
+++ b/5.3/5.3.4/index.html
@@ -13,7 +13,7 @@ checkSpam('free xxxxx') == true
 checkSpam("innocent rabbit") == false
 <script>
 	function checkSpam(str) {
-		return (str.toLowerCase().includes('viagra') || str.toLowerCase().includes('XXX'.toLowerCase()));
+		return (str.toLowerCase().includes('viagra') || str.toLowerCase().includes('xxx'));
 	}
 </script>
 </body>
