--- a/5.3/5.3.6/index.html
+++ b/5.3/5.3.6/index.html
@@ -15,23 +15,21 @@
 		userText: null,
 		newUserText: '',
 		init() {
-			this.getMessage();
-			this.getFirstBigSymbolWord();
+			this.askMessage();
+			this.makeFirstCharacterBig();
 			this.showMessage();
 		},
-		getMessage() {
+		askMessage() {
 			this.userText = prompt('Введите текст');
 		},
-		getFirstBigSymbolWord() {
+		makeFirstCharacterBig() {
 			let text = this.userText + ' ';
 
-			if (text.indexOf(' ') >= 0) {
-				while (text.indexOf(' ') >= 0) {
-					const word = text.slice(0, text.indexOf(' '));
+			while (text.indexOf(' ') >= 0) {
+				const word = text.slice(0, text.indexOf(' '));
 
-					this.newUserText += word[0].toUpperCase() + word.slice(1) + ' ';
-					text = text.slice(text.indexOf(' ') + 1);
-				}
+				this.newUserText += word[0].toUpperCase() + word.slice(1) + ' ';
+				text = text.slice(text.indexOf(' ') + 1);
 			}
 		},
 		showMessage() {
