--- a/5.4/5.4.4/index.html
+++ b/5.4/5.4.4/index.html
@@ -11,7 +11,7 @@
 2) принимает массив и возвращает сумму всех айтемов.
 Если в переданном массиве имеются нечисловые айтемы, тогда в расчете суммы их принимать за ноль.
 <script>
-	const obj = {
+	const numObj = {
 		isNumber(value) {
 			return (typeof value === 'number');
 		},
