--- a/5.5/5.5.1/index.html
+++ b/5.5/5.5.1/index.html
@@ -22,9 +22,7 @@ P.S. Подсказка: используйте split, чтобы разбить
 			return (index === 0) ? item : item[0].toUpperCase() + item.slice(1);
 		})
 
-		let newStr = newStringArr.join('');
-
-		return newStr;
+		return newStringArr.join('');
 	}
 </script>
 </body>
