--- a/5.5/5.5.5/index.html
+++ b/5.5/5.5.5/index.html
@@ -15,7 +15,7 @@ alert( sorted ); // CSS, HTML, JavaScript
 alert( arr ); // HTML, JavaScript, CSS (без изменений)
 <script>
 	function copySorted(arr) {
-		let newArr = arr.slice(0);
+		const newArr = arr.slice(0);
 
 		return newArr.sort();
 	}
