--- a/5.5/5.5.9/index.html
+++ b/5.5/5.5.9/index.html
@@ -23,8 +23,8 @@ shuffle(arr);
 Все последовательности элементов должны иметь одинаковую вероятность. Например, [1,2,3] может
 быть переупорядочено как [1,2,3] или [1,3,2], или [3,1,2] и т.д., с равной вероятностью каждого случая.
 <script>
-	function compare(a, b) {
-		if (a > b) return Math.floor((Math.random() * 2) - 1);
+	function compare() {
+		return (Math.random() <= 0.5) ? -1 : 1;
 	}
 
 	function shuffle(array) {
@@ -33,9 +33,9 @@ shuffle(arr);
 
 	let arr = [1, 2, 3];
 
-	shuffle(arr);
-	shuffle(arr);
-	shuffle(arr);
+	console.log(shuffle(arr));
+	console.log(shuffle(arr));
+	console.log(shuffle(arr));
 </script>
 </body>
 </html>
