--- a/5.5/5.5.10/index.html
+++ b/5.5/5.5.10/index.html
@@ -20,18 +20,18 @@ alert( getAverageAge(arr) ); // (25 + 30 + 29) / 3 = 28
 	function getAverageAge(users) {
 		let sum = 0;
 
-		users.forEach(function (item) {
-			sum += item.age;
+		users.forEach(function (user) {
+			sum += user.age;
 		})
 
 		return (sum / users.length);
 	}
 
-	let vasya = {name: "Вася", age: 25};
-	let petya = {name: "Петя", age: 30};
-	let masha = {name: "Маша", age: 29};
+	const vasya = {name: "Вася", age: 25};
+	const petya = {name: "Петя", age: 30};
+	const masha = {name: "Маша", age: 29};
 
-	let arr = [vasya, petya, masha];
+	const arr = [vasya, petya, masha];
 
 	alert(getAverageAge(arr)); // (25 + 30 + 29) / 3 = 28
 </script>
