--- a/5.11/5.11.1/index.html
+++ b/5.11/5.11.1/index.html
@@ -14,20 +14,22 @@ alert( formatDate(customDate) ); // '30.01.14'
 P.S. Обратите внимание, ведущие нули должны присутствовать, то есть 1 января 2001 должно быть 01.01.01, а не 1.1.1.
 <script>
 	function formatDate(date) {
-		const newDate = new Date(date);
+		const year = String(date.getFullYear()).slice(-2);
 
-		let stringData = (newDate.getDate() > 10) ? newDate.getDate() + '.' : '0' + newDate.getDate() + '.';
+		let day = date.getDate();
+		let month = date.getMonth();
+		let stringData;
 
-		stringData += (newDate.getMonth() > 8) ? newDate.getMonth() + 1 + '.' : '0' + (newDate.getMonth() + 1) + '.';
-
-		stringData += String(newDate.getFullYear()).slice(-2);
+		day = (day > 10) ? day + '.' : '0' + day + '.';
+		month = (month > 8) ? month + 1 + '.' : '0' + (month + 1) + '.';
+		stringData = day + month + year;
 
 		return stringData;
 	}
 
 	const customDate = new Date(2014, 0, 30);
 
-	alert( formatDate(customDate) )
+	alert(formatDate(customDate))
 </script>
 </body>
 </html>
